Fixes canvas to resize/re-adjust based on whether the side panel is expanded or collapsed

--- a/cdap-ui/app/features/hydratorplusplus/adapters.less
+++ b/cdap-ui/app/features/hydratorplusplus/adapters.less
@@ -25,7 +25,7 @@ body.theme-cdap {
     &:not(.state-hydrator-create), &.state-hydrator-create-studio {
       main.container {
         // Offset the Hydrator navbar + top panel
-        margin-top: 110px;
+        margin-top: 93px;
       }
     }
 
@@ -53,9 +53,9 @@ body.theme-cdap {
       height: 60vh;
       &:not(.canvas-scroll) {
         // Subtract navbar, top panel, collapsed bottom panel and footer from total viewport height
-        height: ~"-moz-calc(100vh - 213px)";
-        height: ~"-webkit-calc(100vh - 213px)";
-        height: ~"calc(100vh - 213px)";
+        height: ~"-moz-calc(100vh - 187px)";
+        height: ~"-webkit-calc(100vh - 187px)";
+        height: ~"calc(100vh - 187px)";
       }
       @media (min-height: 800px) {
         height: 40vh;
