--- a/cdap-ui/app/features/hydratorplusplus/bottompanel.less
+++ b/cdap-ui/app/features/hydratorplusplus/bottompanel.less
@@ -149,14 +149,12 @@ body.theme-cdap.state-hydratorplusplus {
       width: ~"-moz-calc(100vw - 130px)";
       width: ~"-webkit-calc(100vw - 130px)";
       width: ~"calc(100vw - 130px)";
-      margin-left: 130px;
       .transition(width 0.2s ease);
     }
     &.expanded ~ .right-wrapper div.console:not(.maximized) {
       width: ~"-moz-calc(100vw - 290px)";
       width: ~"-webkit-calc(100vw - 290px)";
       width: ~"calc(100vw - 290px)";
-      margin-left: 290px;
     }
   }
 
