--- a/cdap-ui/app/features/hydratorplusplus/leftpanel.less
+++ b/cdap-ui/app/features/hydratorplusplus/leftpanel.less
@@ -249,7 +249,17 @@ body.theme-cdap.state-hydratorplusplus-create {
           max-width: ~"calc(100% - 290px)";
         }
       }
+      ~ .right-wrapper {
+        margin-left: 290px;
+      }
 
+    }
+
+    ~ .right-wrapper {
+      margin-left: 130px;
+      height: 100%;
+      position: relative;
+      .transition(all 0.2s ease);
     }
 
     width: 130px;
